--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "express": "4.17.1"
   },
   "scripts": {
-    "start": "node api-server.js"
+    "start": "node api-server.js",
+    "publishheroku": "cd ../ && git subtree push --prefix server heroku-server main || true"
   }
 }
